Add sad tessa to 404 page

--- a/404.html
+++ b/404.html
@@ -7,3 +7,5 @@ redirect: true
 ---
 
 <p>You will be redirected to the main page within 3 seconds. If not redirected, please click <a href="{{ site.baseurl }}/">here</a>.</p>
+
+{% include figure.html path="assets/img/tessa-sad.png" class="img-fluid" zoomable=false width="50%" %}
